--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,6 +9,7 @@
     <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
     <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
     <uses-permission android:name="android.permission.BLUETOOTH" />
+    <uses-permission android:name="android.permission.FOREGROUND_SERVICE" />
 
     <application
         android:allowBackup="true"
@@ -17,9 +18,11 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.FooChat">
-        <activity
-            android:name=".activities.DeviceDiscoverActivity"
-            android:exported="false" />
+        <service
+            android:name=".services.BluetoothListenerService"
+            android:enabled="true"
+            android:exported="true" />
+
         <activity
             android:name=".activities.MainActivity"
             android:exported="true">
@@ -29,6 +32,10 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity
+            android:name=".activities.DeviceDiscoverActivity"
+            android:exported="false"
+            android:parentActivityName=".activities.MainActivity" />
     </application>
 
 </manifest>
