--- a/app/build.gradle
+++ b/app/build.gradle
@@ -6,7 +6,7 @@ android {
     compileSdk 31
 
     defaultConfig {
-        applicationId "fr.foo.foochat"
+        applicationId "fr.oupson.foochat"
         minSdk 21
         targetSdk 31
         versionCode 1
